[package]
name = "bitbot_bsp"
version = "0.0.1"
edition = "2021"
authors = ["Glenn Bitar"]
description = "A board support package for the BBC micro:bit v2-powered 4tronix Bit:Bot XL"
repository = "https://github.com/glennib/bitbot_bsp"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std", "asynchronous", "hardware-support"]
keywords = ["microbit", "bitbot", "fun", "embassy", "bbc"]
default-run = "bb"


[dependencies]
microbit-bsp= { path = "../microbit-bsp", version = ">0.2.0" }

embassy-futures = { version = "0.1", default-features = false }
embassy-executor = { version = "0.5", default-features = false, features = ["integrated-timers", "defmt", "arch-cortex-m", "executor-thread", "executor-interrupt", "task-arena-size-32768"] }
embassy-time = { version = "0.3", default-features = false, features = ["defmt-timestamp-uptime", "defmt"] }

cortex-m-rt = "0.7"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2

[lints.clippy]
pedantic = "warn"
empty_loop = "allow"
